<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/prenom1"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="101dp"
        android:hint="@string/prenom1prompt"
        android:inputType="text"
        android:text="@string/prenom1"
        app:layout_constraintBottom_toTopOf="@+id/prenom2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/prenom2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/prenom2prompt"
        android:inputType="text"
        android:text="@string/prenom2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prenom1"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="74dp"
        android:text="@string/buttonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prenom2"
        android:onClick="TestMatch"
        android:drawableRight="@drawable/like"
        />

</androidx.constraintlayout.widget.ConstraintLayout>